úklid a úprava výpisu počtu zbývajících úkolů na stránku

--- a/toDoApp.html
+++ b/toDoApp.html
@@ -15,6 +15,10 @@
         <a href="#" class="myBtn">Tlačítko</a>
         <input id="search-text" type="text" placeholder="Hledaný text">
 
+        <div id="to-dos-left">
+
+        </div>
+
         <div id="results-todos">
 
         </div>
